# crossfit_info

./: .gitignore  Dockerfile  pyproject.toml  secrets.json
.config/: crossfit.nginx  gunicorn.py
app/: crossfit_dawta_Preprocessing.ipynb  크로스핏 박스 데이터 .ipynb
app/boxes/: models.py
app/boxes/migrations/: 0001_initial.py  0002_box_boxstate.py  0003_auto_20200710_2037.py
app/coaches/: models.py
app/coaches/migrations/: 0001_initial.py
app/config/: settings.py
app/members/migrations/: 0001_initial.py
