[tool.poetry]
name = "miniproject_crossfit_0305"
version = "0.1.0"
description = ""
authors = ["kimdooh2019 <dopa213@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
notebook = "^6.0.3"
requests = "^2.23.0"
django-extensions = "^2.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
