[tool.poetry]
name = "crossfit_info"
version = "0.1.0"
description = ""
authors = ["kimdooh2019 <choiinhee2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
notebook = "^6.0.3"
django-extensions = "^3.0.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
